[package]
name = "rsa-wasm"
version = "0.1.0"
authors = ["jspspike <jspspike@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rsa = "0.3.0"
rand = "0.7.3"
base64 = "0.12.3"
wasm-bindgen = "0.2.65"
